--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,7 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "InternetShowdown2-main.sln",
+    "dotnet.defaultSolution": "InternetShowdown2.sln",
     "cSpell.words": [
         "ARGB",
         "Behaviour",
