--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.collab-proxy": "2.3.1",
@@ -10,6 +11,7 @@
     "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.wooshii.hierarchydecorator": "https://github.com/WooshiiDev/HierarchyDecorator.git",
