--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
         "speedlines",
         "Tweener",
         "Tweening",
-        "короч"
+        "ассетов",
+        "короч",
+        "плеймода"
     ],
     "cSpell.language": "en,ru"
 }
