--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "Rigidbody",
         "rolloff",
         "Scriptable",
+        "Sirenix",
         "spatialize",
         "speedlines",
         "Tweener",
