rename themedbutton to themeinteractable + selection support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "Dont",
         "Gamepad",
         "Gameped",
+        "Interactable",
         "Lerp",
         "Mathf",
         "pixelize",
