top bar fixes + joining + import globaldata

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+ZSToolkitGlobalDataEncryptionKey.cs
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
