fix dotween errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "speedlines",
         "Tweener",
         "Tweening",
+        "Tweens",
         "ассетов",
         "короч",
         "нахуй",
